<resources>
    <string name="app_name">Mattespill</string>
    <string name="startspill">Start spill</string>
    <string name="sestatistikk">Se statistikk</string>
    <string name="preferanser">Se preferanser</string>
    <string name="overskriftMain">Mattespill</string>
    <string name="overskriftPreferanser">Preferanser</string>
    <string name="overskriftStatistikk">Statistikk</string>
    <string name="infoPreferanser">Her kan du velge antall regnestykker du skal løse i spillet</string>
    <string name="overskriftStartSpill">Regn ut følgende</string>
    <string name="regnestykke"/>
    <string name="antallRiktig">Antall riktig svar: %1$d</string>
    <string name="antallFeil">Antall feil svar: %1$d</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_sendsvar">Svar</string>
    <string name="svar"/>
    <string name="preferanse5">5</string>
    <string name="preferanse10">10</string>
    <string name="preferanse15">15</string>
    <string name="currentPreferanse">Din nåværende preferanse er: %1$d</string>
    <string name="overskriftOppsummering">Oppsummering</string>
    <string name="tilbakeTilMain">Tilbake til hovedmeny</string>
    <string name="oppsummeringInfo">Gratulerer! Du fikk %1$d riktig og %2$d feil.</string>
    <string name="infoSpraak">Velg språk</string>
    <string name="statistikkTekstRiktig">Totalt antall riktige svar:</string>
    <string name="statistikkTekstFeil">Totalt antall feil svar:</string>
    <string name="statistikkRiktig"/>
    <string name="statistikkFeil"/>
    <string name="slettStatistikk">Slett statistikk</string>
    <string name="popupMelding">Vil du virkelig avslutte spillet?</string>
    <string name="popupMeldingStatistikk">Vil du virkelig slette all statistikk?</string>
    <string name="popupPos">Ja</string>
    <string name="popupNeg">Nei</string>
    <string name="popupFerdig">Det er ingen flere tilgjengelige spørsmål</string>
    <string name="popupOk">OK</string>
    <string name="svarProsentTekst">Prosent riktig: </string>
    <string name="svarProsent"/>
    <string name="oppsummeringTekst">En komplett oversikt finner du på statistikksiden.</string>
</resources>