<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overskriftPreferanser"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/button_border"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoPreferanser"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_preferanser_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:background="@drawable/button_border"
            android:text="@string/preferanse5" />

        <Button
            android:id="@+id/button_preferanser_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:width="150dp"
            android:background="@drawable/button_border"
            android:text="@string/preferanse10" />

        <Button
            android:id="@+id/button_preferanser_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:width="150dp"
            android:background="@drawable/button_border"
            android:text="@string/preferanse15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:id="@+id/current_preferanse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</RelativeLayout>